--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,17 @@ body{
     margin: 0;
     font-family: 'Manrope', sans-serif;
 }
+.darkmode-toggle{
+    background:white;
+}
+.darkmode-layer--button {
+    border-radius: 100%;
+    left:unset;
+}
+  .darkmode--activated .features {
+    border-top: 1px solid #adaeb1;
+    border-bottom: 1px solid #adaeb1;
+  }
 .download{
     display: flex;
     font-size: 1.3rem;
@@ -32,7 +43,7 @@ body{
     text-align: center;
 }
 .description{
-    opacity: 0.7;
+color: rgb(117, 117, 116);
     font-size: 1.5rem;
     text-align: center;
     max-width: 600px;
@@ -40,25 +51,6 @@ body{
 }
 .VKUI{
     margin-right: 10px;
-}
-button {
-    display: flex;
-    margin-top: -10px;
-    cursor: pointer;
-    margin: 0;
-    padding: 24px 38px;
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    background-color: #01579b;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    -webkit-transition-duration: 0.4s;
-    -moz-transition-duration: 0.4s;
-    -o-transition-duration: 0.4s;
-    -ms-transition-duration: 0.4s;
-    transition-duration: 0.4s;
 }
 .feature_tittle{
     font-style: normal;
@@ -74,6 +66,7 @@ color: #18191F;
 }
 a{
     text-decoration: none;
+    isolation: isolate;
 }
 .feature{
     width: 335px;
